# vi_metrics_time

./: .gitignore  CMakeLists.txt  README.md
source/: header.h  main.cpp  misc.cpp  misc.h  tm_BCM2835.cpp  tm_asm.cpp  tm_boost.cpp  tm_linux.cpp  tm_masm.asm  tm_masm_x64.asm  tm_masm_x64.h  tm_standard.cpp  tm_wintel.cpp
source/doc/: For Habr.odt  Measurements.xlsx  Measurements2.xlsx  Measurements3.xlsx  Measurements4.xlsx  Metrics.docx  Metrics2.docx  Metrics3.docx  Metrics4.docx  vi_metrics_time.cmd  vi_metrics_time.sh  vit_timing.cmd
source/doc/Logs.2024_04_04/: vi_metrics_time.CHEREPAHA-CRUTE.2.txt  vi_metrics_time.CHEREPAHA-CRUTE.3.txt  vi_metrics_time.CHEREPAHA-CRUTE.4.txt  vi_metrics_time.HTPC_LINUX.1.txt  vi_metrics_time.HTPC_LINUX.2.txt  vi_metrics_time.HTPC_LINUX.3.txt  vi_metrics_time.RASPI2.1.txt  vi_metrics_time.RASPI2.2.txt  vi_metrics_time.RASPI2.3.txt  vi_metrics_time.RASPI4.1.txt  vi_metrics_time.RASPI4.2.txt  vi_metrics_time.RASPI4.3.txt  vi_metrics_time.TIXO-HOME.1.txt  vi_metrics_time.TIXO-HOME.2.txt  vi_metrics_time.TIXO-HOME.3.txt  vi_metrics_time.TIXO-HTPC.2.txt  vi_metrics_time.TIXO-HTPC.3.txt  vi_metrics_time.TIXO-HTPC.txt  vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.TIXO-WORK.2.txt  vi_metrics_time.TIXO-WORK.3.txt  vi_metrics_time.TIXO_MONOBLOCK.1.txt  vi_metrics_time.TIXO_MONOBLOCK.2.txt  vi_metrics_time.TIXO_MONOBLOCK.3.txt  vi_metrics_time.TIXO_PARENTS2.1.txt  vi_metrics_time.TIXO_PARENTS2.2.txt  vi_metrics_time.TIXO_PARENTS2.3.txt  vi_metrics_time.WORK_LINUX.01.txt  vi_metrics_time.WORK_LINUX.02.txt  vi_metrics_time.WORK_LINUX.03.txt
source/doc/Logs.2024_04_12/: vi_metrics_time.RASPI2.1.txt  vi_metrics_time.RASPI2.2.txt  vi_metrics_time.RASPI2.3.txt  vi_metrics_time.RASPI4.1.txt  vi_metrics_time.RASPI4.2.txt  vi_metrics_time.RASPI4.3.txt  vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.TIXO-WORK.2.txt  vi_metrics_time.TIXO-WORK.3.txt  vi_metrics_time.WORK_LINUX.1.txt  vi_metrics_time.WORK_LINUX.2.txt  vi_metrics_time.WORK_LINUX.3.txt
source/doc/logs.2024_04_22/: vi_metrics_time.TIXO-HTPC.1.txt  vi_metrics_time.TIXO-HTPC.2.txt  vi_metrics_time.TIXO-HTPC.3.txt  vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.TIXO-WORK.2.txt  vi_metrics_time.TIXO-WORK.3.txt
source/doc/logs.2024_04_24/: vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.cmd
source/doc/vi_metrics_time.2024_04_26/: vi_metrics_time.CHEREPAHA-CRUTE.1.txt  vi_metrics_time.CHEREPAHA-CRUTE.2.txt  vi_metrics_time.CHEREPAHA-CRUTE.3.txt  vi_metrics_time.HOME-LINUX.1.txt  vi_metrics_time.HOME-LINUX.2.txt  vi_metrics_time.HOME-LINUX.3.txt  vi_metrics_time.HTPC_LINUX.1.txt  vi_metrics_time.HTPC_LINUX.2.txt  vi_metrics_time.HTPC_LINUX.3.txt  vi_metrics_time.RBP4.1.txt  vi_metrics_time.RBP4.2.txt  vi_metrics_time.RBP4.3.txt  vi_metrics_time.RPB1.1.txt  vi_metrics_time.RPB1.2.txt  vi_metrics_time.RPB1.3.txt  vi_metrics_time.TIXO-HOME.1.txt  vi_metrics_time.TIXO-HOME.2.txt  vi_metrics_time.TIXO-HOME.3.txt  vi_metrics_time.TIXO-HTPC.1.txt  vi_metrics_time.TIXO-HTPC.2.txt  vi_metrics_time.TIXO-HTPC.3.txt  vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.TIXO-WORK.2.txt  vi_metrics_time.TIXO-WORK.3.txt  vi_metrics_time.WORK-LINUX.1.txt  vi_metrics_time.WORK-LINUX.2.txt  vi_metrics_time.WORK-LINUX.3.txt
source/doc/vi_metrics_time.2024_05_05/: vi_metrics_time.TIXO-MONOBLOCK.1.txt  vi_metrics_time.TIXO_PARENTS2.1.txt  vi_metrics_time.WORK-LINUX.1.txt  vi_metrics_time.cmd
source/doc/vi_metrics_time.2024_05_16/: vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.TIXO-WORK.2.txt  vi_metrics_time.WORK_LNX.2024_05_17.1.txt  vi_metrics_time.WORK_LNX.2024_05_17.2.txt  vi_metrics_time.cmd
source/doc/vi_metrics_time.2024_05_17/: vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.TIXO-WORK.2.txt  vi_metrics_time.TIXO-WORK.3.txt  vi_metrics_time.WORK_LINUX.1.txt  vi_metrics_time.WORK_LINUX.2.txt
source/doc/vi_metrics_time.2024_05_20/: vi_metrics_time.TIXO-WORK.1.txt  vi_metrics_time.TIXO-WORK.2.txt  vi_metrics_time.TIXO-WORK.3.txt  vi_metrics_time.WORK_LINUX.1.txt  vi_metrics_time.WORK_LINUX.2.txt  vi_metrics_time.WORK_LINUX.3.txt  vi_metrics_time.cmd  vi_metrics_time.sh
source/doc/vi_metrics_time.2024_05_29/: vi_metrics_time.RaspberryPi4.1.txt  vi_metrics_time.RaspberryPi4.2.txt  vi_metrics_time.RaspberryPi4.3.txt
source/doc/vi_metrics_time.2024_06_04/: vi_metrics_time.v469740787.local.1.txt  vi_metrics_time.v469740787.local.2.txt  vi_metrics_time.v469740787.local.3.txt
